[package]
authors = ["Y <j4fdot@qq.com>"]
description = "💹 命令行 A 股沪深北证股票信息行情数据查询工具"
edition = "2024"
homepage = "https://github.com/rookie0/rains"
license = "MIT"
name = "rains"
readme = "README.md"
repository = "https://github.com/rookie0/rains"
version = "0.2.2"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
futures-util = "0.3"
http = "1.4"
once_cell = "1.9"
owo-colors = "4.1"
pinyin = "0.11"
regex = "1.5"
reqwest = { version = "0.13", features = ["json", "query", "blocking", "native-tls-vendored"], default-features = false }
scraper = "0.25"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls-vendored"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
